build: Updating dependencies
composer:
* mediawiki/mediawiki-codesniffer: 34.0.0 → 35.0.0
* mediawiki/minus-x: 1.1.0 → 1.1.1

npm:
* eslint-config-wikimedia: 0.17.0 → 0.18.1
  The following rules are failing and were disabled:
  * compat/compat

Change-Id: I7f205da87bedf64a37e3834f0efe90dddfcdbd55

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,7 @@
 	"rules": {
 		"no-implicit-globals": "off",
 		"vars-on-top": "off",
-		"one-var": "off"
+		"one-var": "off",
+		"compat/compat": "warn"
 	}
 }
