build: Remove requireLowerCase: initial config from banana-checker
This extension does not have message keys with upper case letters
Require to use lower case message keys to match best practice

Change-Id: Ib46bcff8fa3d1fe368f00e9ce31a2849ec3a0983

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,7 +12,6 @@
 		"mediaWiki": false
 	},
 	"rules": {
-		"no-implicit-globals": "off",
-		"compat/compat": "warn"
+		"no-implicit-globals": "off"
 	}
 }
